# long-video-autocut

./: .gitignore  CODE_DOCUMENTATION.md  CONTEXT.md  README.md  pyproject.toml
docs/: implementation-batch-1-cli-foundation.md  implementation-batch-2-asr-foundation.md  implementation-batch-3-stepaudio-sharding.md  implementation-batch-4-topic-review.md  implementation-batch-5-export-deliverables.md  implementation-batch-6-skill-orchestrator.md  implementation-plan.md  real-e2e-topic-review-improvement-plan.md  review-robustness-and-concurrent-export-plan.md  字幕烧录与语气词过滤执行方案.md
docs/adr/: 0001-use-hybrid-topic-detection-for-live-clips.md  0002-export-all-publish-ready-live-clips-by-default.md  0003-use-stepaudio-as-default-transcription-provider.md  0004-transcribe-long-live-videos-in-audio-shards.md  0005-use-stepfun-chat-as-default-topic-review-model.md  0006-review-topic-candidates-in-neighboring-batches.md  (+6 more)
tests/: test_config.py  test_context.py  test_e2e_verify_deliverables.py  test_export_decision.py  test_live_dry_run_e2e.py  test_live_export.py  test_live_export_e2e.py  test_live_selection.py  test_media_report_cli.py  test_orchestration.py  test_orchestration_e2e.py  test_plan.py  test_preflight.py  test_review.py  test_review_partial_degrade.py  test_subtitle.py  test_subtitle_align.py  test_subtitle_optimizer.py  test_transcript.py
video_auto_editor/: cli.py  config.py  context.py  export.py  media.py  models.py  orchestration.py  plan.py  preflight.py  report.py  review.py  selection.py  subtitle.py  subtitle_align.py  subtitle_optimizer.py  transcript.py
(+7 files in other folders)
