[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "video-auto-editor"
version = "4.7.0"
description = "Long video auto cut CLI for single videos, batches, and live clip planning."
requires-python = ">=3.10"
dependencies = [
    "openai-whisper",
]

[project.scripts]
video-auto-editor = "video_auto_editor.cli:main"

[tool.setuptools.packages.find]
include = ["video_auto_editor*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
